# DemoVirtualKeyboard

./: CMakeLists.txt  Keyboard.qml  KeyboardButton.qml  Main.qml  MainKeyboardLayout.qml  NumericKeyboardLayout.qml  README.md  ScreenContent.qml  keyboardhandler.cpp  keyboardhandler.h  main.cpp
backup/: CMakeLists.txt  Main.qml  keyboardhandler.cpp  keyboardhandler.h  main.cpp
